<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionbar_settings_item"
        android:title="@string/actionbar_settings_option_title" />
    <item
        android:id="@+id/actionbar_logout_item"
        android:title="@string/actionbar_settings_logout_title" />
    <item
        android:id="@+id/actionbar_find_order_QR_item"
        android:title="@string/actionbar_find_order_QR_title" />
    <item
        android:id="@+id/actionbar_switch_item"
        android:title=""
        app:showAsAction="always"
        app:actionLayout="@layout/use_switch"/>
    <item
        android:id="@+id/actionbar_add_orders_item"
        android:title="@string/actionbar_add_orders_option_title"
        android:icon="@mipmap/ic_new_order2"
        app:showAsAction="always"/>
</menu>