<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iths.grupp1.leveransapp.view.LoginActivity">

    <TextView
        android:id="@+id/activity_login_login_label"
        android:textSize="30dp"
        android:layout_marginBottom="70dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_login_label" />


    <TextView
        android:id="@+id/activity_login_username_message"
        android:layout_below="@+id/activity_login_login_label"
        android:layout_centerHorizontal="true"
        android:text="@string/empty_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/activity_login_username_value"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:layout_below="@+id/activity_login_login_label"
        android:hint="@string/activity_login_username_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/activity_login_password_message"
        android:layout_below="@+id/activity_login_username_value"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/activity_login_password_value"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:hint="@string/activity_login_password_hint"
        android:layout_margin="20dp"
        android:layout_below="@+id/activity_login_username_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:text="@string/activity_login_login_btn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/activity_login_login_btn"
        android:onClick="goToOrders"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
