<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.iths.grupp1.leveransapp.view.SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/activity_background"
    android:id="@+id/activity_settings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_settings_orders_setting_text_value"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/activity_settings_orders_setting_label"
        android:id="@+id/activity_settings_orders_setting_label" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/activity_settings_orders_setting_text_value"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:max="10"
        android:id="@+id/activity_settings_seekbar" />

    <TextView
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/activity_settings_seekbar"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:text="@string/activity_settings_number_of_orders"
        android:id="@+id/activity_settings_orders_setting_text_value" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/activity_settings_orders_setting_text_value"
        android:layout_marginTop="40dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/activity_settings_horizontal_line_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_settings_horizontal_line_1"
        android:layout_alignStart="@+id/activity_settings_orders_setting_label"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_centerVertical="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/activity_settings_phone_number_setting_label"
        android:id="@+id/activity_settings_phone_number_setting_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_settings_phone_number_setting_label"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:textSize="17sp"
        android:text="@string/activity_settings_phone_number_setting_desc"
        android:id="@+id/activity_settings_phone_number_setting_desc" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_settings_phone_number_setting_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:inputType="phone"
        android:maxLength="15"
        android:ems="10"
        android:id="@+id/activity_settings_phone_number_setting_value" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_settings_phone_number_setting_value"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_settings_phone_number_setting_btn_label"
        android:id="@+id/activity_settings_change_number_btn" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/activity_settings_change_number_btn"
        android:layout_marginTop="40dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/activity_settings_horizontal_line_2" />

</RelativeLayout>